<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstname" 
        android:textSize="20sp"/>
    
     <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_fristname"
        android:maxLines="1"
        android:singleLine="true" />
     
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lastname"
        android:textSize="20sp" />
    
     <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_lastname"
        android:maxLines="1"
        android:singleLine="true" />
     
     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email" 
     	android:textSize="20sp" />
    
     <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email" 
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true" />
     
     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password" 
        android:textSize="20sp"	/>
    
     <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password" 
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true" />
     
     
     </LinearLayout>