<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/viewbusinessbackground" >

    <RelativeLayout
        android:id="@+id/Layout"
        android:layout_width="fill_parent"
        android:layout_height="900dp" >

        <LinearLayout
            android:id="@+id/LinearLayout01"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="23sp" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="46dp"
                tools:ignore="TextFields" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="23sp" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="46dp"
                tools:ignore="TextFields" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/website"
                android:textSize="23sp" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="46dp"
                android:ems="10"
                tools:ignore="TextFields" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/LinearLayout01"
            android:text="@string/day_operation"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/Spinner02"
            android:text="@string/end_day"
            android:textSize="23sp" />

        <Spinner
            android:id="@+id/Spinner02"
            android:layout_width="90dp"
            android:layout_height="36dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="22dp"
            android:layout_toRightOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/Spinner01"
            android:text="@string/begin_day"
            android:textSize="23sp" />

        <Spinner
            android:id="@+id/Spinner01"
            android:layout_width="90dp"
            android:layout_height="36dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textView3"
            android:layout_marginTop="17dp"
            android:layout_toRightOf="@+id/textView1" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="15dp"
            android:text="@string/hours_operation"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView4"
            android:layout_marginTop="18dp"
            android:text="@string/begin_time"
            android:textSize="23sp" />

        <Spinner
            android:id="@+id/Spinner03"
            android:layout_width="90dp"
            android:layout_height="36dp"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/TextView01"
            android:layout_toRightOf="@+id/TextView01" />

        <Spinner
            android:id="@+id/Spinner04"
            android:layout_width="90dp"
            android:layout_height="36dp"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/TextView02"
            android:layout_toRightOf="@+id/TextView02" />

        <Button
            android:id="@+id/button3"
            android:layout_width="120dp"
            android:layout_height="60dip"
            android:layout_below="@+id/TextView02"
            android:layout_marginTop="28dp"
            android:layout_toRightOf="@+id/textView3"
            android:onClick="cancelViewBussiness"
            android:text="@string/cancel"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/Spinner03"
            android:layout_marginTop="16dp"
            android:text="@string/end_time"
            android:textSize="23sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="60dip"
            android:layout_alignBaseline="@+id/button3"
            android:layout_alignBottom="@+id/button3"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/textView3"
            android:onClick="viewBusiness"
            android:text="@string/save"
            android:textColor="@color/black" />
    </RelativeLayout>

</ScrollView>