<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".OwnersHome" 
    android:background="@drawable/mainbackground">

    <Button
        android:id="@+id/button2"
        android:layout_width="170dip"
        android:layout_height="60dip"
        android:layout_above="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="47dp"
        android:textColor="@color/white_text"
        android:text="@string/addbusiness" 
        android:onClick="addBusiness"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="170dip"
        android:layout_height="60dip"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="82dp"
        android:text="@string/settings"
        android:textColor="@color/white_text" 
        android:onClick="settings"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="170dip"
        android:layout_height="60dip"
        android:layout_alignLeft="@+id/button2"
        android:layout_centerVertical="true"
        android:text="@string/viewbusiness"
        android:textColor="@color/white_text" 
        android:onClick="viewBusiness" />

</RelativeLayout>